# openrelik-worker-analyzer-logs

./: .gitignore  Dockerfile  README.md  Tiltfile  openrelik.yaml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
src/: analyzer_output.py  app.py  auth.py  auth_log_analyzer.py  ssh_analyzer.py  tasks.py  test_ssh_analyzer.py
test_data/: linux_ssh_analysis.md  secure.1
tests/: test_auth.py  test_auth_log_analyzer.py  test_ssh_analyzer.py  test_tasks.py
